tree-sitter-ix/grammar.js
    source_file: ($) =>
      choice(
        seq(
          $.module_header,
          repeat($._module_statement),
          $.module_return_statement,
        ),
        repeat1($._module_statement),
      ),

    module_header: ($) =>
      seq(
        "module",
        field("parameters", $.parameter_list),
        "where",
      ),

    _module_statement: ($) =>
      choice(
        $.declare_effect_statement,
        $.effect_statement,
        $.declare_record_statement,
        $.type_declaration_statement,
        $.import_statement,
        $.module_binding_statement,
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    _statement: ($) =>
      choice(
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.return_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    binding_statement: ($) =>
      seq(
        field("kind", choice("let", "const")),
        optional(field("recursive", "rec")),
        optional(field("linear", "!")),
        field(
          "name",
          choice($.identifier, $.wildcard, $.destructuring_pattern),
        ),
        optional(seq(":", field("type", $.type_reference))),
        "=",
        field("value", $._expression),
      ),

    destructuring_pattern: ($) =>
      seq(
        "{",
        optional(
          commaSep1(field("name", choice($.identifier, $.wildcard))),
        ),
        "}",
      ),

    effect_row: ($) => $._effect_row_expression,

    _effect_row_expression: ($) =>
      choice(
        $.effect_union_expression,
        $.effect_intersection_expression,
        $.effect_difference_expression,
        $.parenthesized_effect_expression,
        $.effect_family_reference,
        $.effect_row_variable,
        $.effect_operation_reference,
      ),

    effect_union_expression: ($) =>
      prec.left(
        PREC.EFFECT_UNION,
        seq(
          field("left", $._effect_row_expression),
          "|",
          field("right", $._effect_row_expression),
        ),
      ),

    effect_intersection_expression: ($) =>
      prec.left(
        PREC.EFFECT_INTERSECTION,
        seq(
          field("left", $._effect_row_expression),
          "&",
          field("right", $._effect_row_expression),
        ),
      ),

    effect_difference_expression: ($) =>
      prec.left(
        PREC.EFFECT_DIFFERENCE,
        seq(
          field("left", $._effect_row_expression),
          "\\",
          field("right", $._effect_row_expression),
        ),
      ),

    parenthesized_effect_expression: ($) =>
      seq("(", field("value", $._effect_row_expression), ")"),

    effect_family_reference: ($) => field("effect", $.effect_identifier),

    effect_operation_reference: ($) =>
      seq(
        field("effect", $.effect_identifier),
        ".",
        field("operation", $.identifier),
      ),

    effect_binding_statement: ($) =>
      seq(
        field("name", choice($.identifier, $.wildcard, $.unit_pattern)),
        "<-",
        field("value", $._expression),
      ),

    resume_dup_statement: ($) =>
      seq(
        "let",
        "(",
        "!",
        field("left", $.identifier),
        ",",
        "!",
        field("right", $.identifier),
        ")",
        "=",
        "dup",
        field("value", $.linear_reference),
      ),

    unit_pattern: () => seq("(", ")"),

    declare_effect_statement: ($) =>
      seq(
        "declare",
        "effect",
        field("name", $.effect_identifier),
        field("operations", $.effect_operation_block),
      ),

    effect_statement: ($) =>
      seq(
        "effect",
        field("name", $.effect_identifier),
        field("operations", $.effect_operation_block),
      ),

    effect_operation_block: ($) =>
      seq(
        "{",
        repeat(seq($.effect_operation, optional(","))),
        "}",
      ),

    effect_operation: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("parameters", $.host_parameter_list),
        "=>",
        field("result", $.host_result),
      ),

    declare_record_statement: ($) =>
      seq(
        "declare",
        field("name", $.identifier),
        field("fields", $.type_field_block),
      ),

    import_statement: ($) =>
      seq(
        "import",
        field("name", $.identifier),
        "from",
        field("path", $.string),
      ),

    host_parameter_list: ($) =>
      seq("(", optional(commaSep1($.host_parameter)), ")"),

    host_parameter: ($) =>
      seq(
        optional(
          field(
            "contract",
            choice(
              "scalar",
              "bounded_borrow",
              "frozen_shareable",
              "ownership_transfer",
            ),
          ),
        ),
        field("type", alias($.identifier, $.type_reference)),
      ),

    host_result: ($) =>
      seq(
        optional(
          field(
            "contract",
            choice("scalar", "unique_heap", "frozen_shareable"),
          ),
        ),
        field("type", alias($.identifier, $.type_reference)),
      ),

    module_return_statement: ($) =>
      seq("return", field("exports", $.object_literal)),

    break_statement: ($) =>
      choice(
        "break",
        seq(
          "break",
          token.immediate(/[ \t]+/),
          field("value", $._expression),
        ),
      ),

    assignment: ($) =>
      seq(
        field("name", $.identifier),
        field("operator", choice("=", ":=")),
        field("value", $._expression),
      ),

    for_statement: ($) =>
      choice(
        seq(
          "for",
          field("first", choice($.identifier, $.wildcard)),
          optional(seq(",", field("second", choice($.identifier, $.wildcard)))),
          "in",
          field("start_or_collection", $.condition_expression),
          optional(
            seq(
              "..",
              field("end", $.condition_expression),
              optional(seq("by", field("step", $.condition_expression))),
            ),
          ),
          field("body", prec.dynamic(10, $.block)),
        ),
        seq(
          "for",
          field("start", $.condition_expression),
          "..",
          field("end", $.condition_expression),
          optional(seq("by", field("step", $.condition_expression))),
          field("body", prec.dynamic(10, $.block)),
        ),
      ),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.try_with_expression,
        $.loop_expression,
        $.arrow_function,
        $.recursive_function,
        $.recursive_call_expression,
        $.if_expression,
        $.binary_expression,
        $.is_expression,
        $.unary_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.struct_expression,
        $.extension_expression,
        $.effect_handler_expression,
        $._primary_expression,
      ),

    try_with_expression: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          "try",
          field("body", $._expression),
          "with",
          field("handler", $._expression),
        ),
      ),

    arrow_function: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          field("parameters", choice($.parameter, $.parameter_list)),
          "=>",
          field("body", $._expression),
        ),
      ),

    parameter_list: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      seq(
        optional("const"),
        optional("!"),
        field("name", choice($.identifier, $.wildcard)),
        optional(seq(":", field("type", $.type_reference))),
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          choice(
            ifLetCondition($),
            seq("(", ifLetCondition($), ")"),
            field("condition", $.condition_expression),
          ),
          field("consequence", prec.dynamic(10, $.block)),
          optional(
            seq(
              "else",
              field(
                "alternative",
                choice(
                  prec.dynamic(10, $.block),
                  prec.dynamic(10, $.if_expression),
                ),
              ),
            ),
          ),
        ),
      ),

    union_pattern: ($) =>
      seq(
        ".",
        field("case", $.identifier),
        optional(
          seq("(", field("value", choice($.identifier, $.wildcard)), ")"),
        ),
      ),

    condition_expression: ($) =>
      choice(
        $.condition_binary_expression,
        $.condition_is_expression,
        $.condition_unary_expression,
        $.condition_call_expression,
        $.condition_field_expression,
        $.condition_index_expression,
        $.condition_parenthesized_expression,
        $.number,
        $.string,
        $.character,
        $.boolean,
        $.atom_expression,
        alias("loop", $.identifier),
        $.identifier,
        $.linear_reference,
        $.union_case,
      ),

    binary_expression: ($) => {
      const table = [
        ["||", PREC.OR],
        ["&&", PREC.AND],
        [choice("==", "!="), PREC.EQUALITY],
        [choice("<", "<=", ">", ">="), PREC.COMPARE],
        [choice("+", "-"), PREC.ADD],
        [choice("*", "/", "%"), PREC.MULTIPLY],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          )
        ),
      );
    },

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field(
            "operator",
            choice("-", "!", "&", "borrow", "freeze", "comptime"),
          ),
          field("operand", $._expression),
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("function", $._expression),
          field("arguments", $.argument_list),
        ),
      ),

    argument_list: ($) => seq("(", optional(commaSep1($._expression)), ")"),

    field_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("object", $._expression),
          ".",
          field("field", $.identifier),
        ),
      ),

    struct_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("base", $._expression),
          field("fields", $.field_block),
        ),
      ),

    linear_reference: ($) => seq("!", field("name", $.identifier)),

    object_literal: ($) => field("fields", $.field_block),

    field_block: ($) =>
      seq(
        "{",
        repeat(
          seq(choice($.field_definition, $.shorthand_field), optional(",")),
        ),
        "}",
      ),

    field_definition: ($) =>
      seq(field("name", $.identifier), ":", field("value", $._expression)),

    shorthand_field: ($) => field("name", $.identifier),

    type_field_block: ($) =>
      seq("{", repeat(seq($.type_field, optional(","))), "}"),

    type_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", alias($.identifier, $.type_reference)),
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    // Surface types use whitespace application (`List a`) and right
    // associative arrows (`a -> b`).  Keep the existing type_reference node
    // as the wrapper so simple annotations retain their old tree shape.
    type_reference: ($) => $._type_expression,

    _type_expression: ($) => choice($.function_type, $.type_union),

    function_type: ($) =>
      prec.right(
        PREC.TYPE_ARROW,
        seq(
          field("parameter", $.type_union),
          "->",
          optional(field("effects", $.latent_effect_row)),
          field("result", $._type_expression),
        ),
      ),

    type_union: ($) =>
      prec.left(
        PREC.TYPE_UNION,
        choice(
          $.type_intersection,
          seq(
            field("left", $.type_union),
            "|",
            field("right", $.type_intersection),
          ),
        ),
      ),

    type_intersection: ($) =>
      prec.left(
        PREC.TYPE_INTERSECTION,
        choice(
          $.type_difference,
          seq(
            field("left", $.type_intersection),
            "&",
            field("right", $.type_difference),
          ),
        ),
      ),

    type_difference: ($) =>
      prec.left(
        PREC.TYPE_DIFFERENCE,
        choice(
          $._type_application,
          seq(
            field("left", $.type_difference),
            "\\",
            field("right", $._type_application),
          ),
        ),
      ),

    latent_effect_row: ($) => seq("<", field("row", $.effect_row), ">"),

    _type_application: ($) => choice($.type_application, $._type_prefix),

    unit_type: () => prec(-1, seq("(", ")")),

    wildcard: () => "_",

    identifier: () => /[A-Za-z][A-Za-z0-9_]*/,

    effect_identifier: () => /[A-Z][A-Za-z0-9]*/,

    number: () => /[0-9]+(i32|i64)?/,

    string: () => /"([^"\\]|\\[ntr"\\])*"/,

    character: () => /'([^'\\\n\r]|\\[ntr'\\])'/,

    boolean: () => choice("true", "false"),
