tree-sitter-ix/test/corpus/literals.txt
==================
Text, character, and boolean literals
==================

let message = "hello\nworld"
let newline = '\n'
let quote = '\''
let ready = true
if ready { 'λ' } else { false }
if (let 'c' = newline) { true } else { false }
if let "ready" = message { 1 } else { 0 }

---

(source_file
  (binding_statement
    name: (identifier)
    value: (postfix_expression
      (string)))
  (binding_statement
    name: (identifier)
    value: (postfix_expression
      (character)))
  (binding_statement
    name: (identifier)
    value: (postfix_expression
      (character)))
  (binding_statement
    name: (identifier)
    value: (postfix_expression
      (boolean)))
  (expression_statement
    (if_expression
      condition: (condition_expression
        (identifier))
      consequence: (block
        (expression_statement
          (postfix_expression
            (character))))
      alternative: (block
        (expression_statement
          (postfix_expression
            (boolean))))))
  (expression_statement
    (if_expression
      pattern: (character)
      value: (condition_expression
        (identifier))
      consequence: (block
        (expression_statement
          (postfix_expression
            (boolean))))
      alternative: (block
        (expression_statement
          (postfix_expression
            (boolean))))))
  (expression_statement
    (if_expression
      pattern: (string)
      value: (condition_expression
        (identifier))
      consequence: (block
        (expression_statement
          (postfix_expression
            (number))))
      alternative: (block
        (expression_statement
          (postfix_expression
            (number)))))))
