tree-sitter-ix/test/corpus/modules_and_effects.txt
==================
Inferred host effect
==================

module (!init: Init) where

declare effect Io {
  read: () => Text
  print: (bounded_borrow Text) => Unit
}

declare Init {
  io: Io
}

let greet: () -> <Io.read | Io.print> Text = () => {
  name <- Io.read()
  _ <- Io.print(borrow name)
  name
}

let result = greet()
return { result }

---

(source_file
  (module_header
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (type_union
            (type_intersection
              (type_difference
                (identifier))))))))
  (declare_effect_statement
    (effect_identifier)
    (effect_operation_block
      (effect_operation
        (identifier)
        (host_parameter_list)
        (host_result
          (type_reference)))
      (effect_operation
        (identifier)
        (host_parameter_list
          (host_parameter
            (type_reference)))
        (host_result
          (type_reference)))))
  (declare_record_statement
    (identifier)
    (type_field_block
      (type_field
        (identifier)
        (type_reference))))
  (binding_statement
    (identifier)
    (type_reference
      (function_type
        (type_union
          (type_intersection
            (type_difference
              (unit_type))))
        (latent_effect_row
          (effect_row
            (effect_union_expression
              (effect_operation_reference
                (effect_identifier)
                (identifier))
              (effect_operation_reference
                (effect_identifier)
                (identifier)))))
        (type_union
          (type_intersection
            (type_difference
              (identifier))))))
    (arrow_function
      (parameter_list)
      (block
        (effect_binding_statement
          (identifier)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list)))
        (effect_binding_statement
          (wildcard)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list
              (unary_expression
                (identifier)))))
        (expression_statement
          (identifier)))))
  (binding_statement
    (identifier)
    (call_expression
      (identifier)
      (argument_list)))
  (module_return_statement
    (object_literal
      (field_block
        (shorthand_field
          (identifier))))))

==================
Effect row expressions and effectful bind
==================

let run: () -> <Stdin | Stdout & (Trace \ Debug)> Text = () => {
  line <- Stdin.read_line()
  _ <- Stdout.write_line(borrow line)
  line
}

let inspect: () -> <Stdin | Stdout.write_line | Trace \ Debug> Unit = () => ()

---

(source_file
  (binding_statement
    (identifier)
    (type_reference
      (function_type
        (type_union
          (type_intersection
            (type_difference
              (unit_type))))
        (latent_effect_row
          (effect_row
            (effect_union_expression
              (effect_family_reference
                (effect_identifier))
              (effect_intersection_expression
                (effect_family_reference
                  (effect_identifier))
                (parenthesized_effect_expression
                  (effect_difference_expression
                    (effect_family_reference
                      (effect_identifier))
                    (effect_family_reference
                      (effect_identifier))))))))
        (type_union
          (type_intersection
            (type_difference
              (identifier))))))
    (arrow_function
      (parameter_list)
      (block
        (effect_binding_statement
          (identifier)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list)))
        (effect_binding_statement
          (wildcard)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list
              (unary_expression
                (identifier)))))
        (expression_statement
          (identifier)))))
  (binding_statement
    (identifier)
    (type_reference
      (function_type
        (type_union
          (type_intersection
            (type_difference
              (unit_type))))
        (latent_effect_row
          (effect_row
            (effect_union_expression
              (effect_union_expression
                (effect_family_reference
                  (effect_identifier))
                (effect_operation_reference
                  (effect_identifier)
                  (identifier)))
              (effect_difference_expression
                (effect_family_reference
                  (effect_identifier))
                (effect_family_reference
                  (effect_identifier))))))
        (type_union
          (type_intersection
            (type_difference
              (identifier))))))
    (arrow_function
      (parameter_list)
      (unit_pattern))))

==================
Source fragment
==================

let answer = 40 + 2
answer

---

(source_file
  (binding_statement
    (identifier)
    (binary_expression
      (number)
      (number)))
  (expression_statement
    (identifier)))

==================
Ix handler and resumptions
==================

module () where

effect Counter {
  get: () => I32
  add: (I32) => Unit
}

let counter = {
  let count: I32 = 0
  Counter {
    get: (!resume) => !resume(count),
    add: (amount, !resume) => {
      count = count + amount
      !resume(())
    },
    return: value => { value, count },
  }
}

let make = () => Counter {
  get: (!resume) => !resume(0),
  return: value => value,
}

let result = try run() with counter
let (!left, !right) = dup !resume
return { result }

---

(source_file
  (module_header
    (parameter_list))
  (effect_statement
    (effect_identifier)
    (effect_operation_block
      (effect_operation
        (identifier)
        (host_parameter_list)
        (host_result
          (type_reference)))
      (effect_operation
        (identifier)
        (host_parameter_list
          (host_parameter
            (type_reference)))
        (host_result
          (type_reference)))))
  (binding_statement
    (identifier)
    (block
      (binding_statement
        (identifier)
        (type_reference
          (type_union
            (type_intersection
              (type_difference
                (identifier)))))
        (number))
      (expression_statement
        (struct_expression
          (identifier)
          (field_block
            (field_definition
              (identifier)
              (arrow_function
                (parameter_list
                  (parameter
                    (identifier)))
                (call_expression
                  (linear_reference
                    (identifier))
                  (argument_list
                    (identifier)))))
            (field_definition
              (identifier)
              (arrow_function
                (parameter_list
                  (parameter
                    (identifier))
                  (parameter
                    (identifier)))
                (block
                  (assignment
                    (identifier)
                    (binary_expression
                      (identifier)
                      (identifier)))
                  (expression_statement
                    (call_expression
                      (linear_reference
                        (identifier))
                      (argument_list
                        (unit_pattern)))))))
            (field_definition
              (identifier)
              (arrow_function
                (parameter
                  (identifier))
                (object_literal
                  (field_block
                    (shorthand_field
                      (identifier))
                    (shorthand_field
                      (identifier)))))))))))
  (binding_statement
    (identifier)
    (arrow_function
      (parameter_list)
      (struct_expression
        (identifier)
        (field_block
          (field_definition
            (identifier)
            (arrow_function
              (parameter_list
                (parameter
                  (identifier)))
              (call_expression
                (linear_reference
                  (identifier))
                (argument_list
                  (number)))))
          (field_definition
            (identifier)
            (arrow_function
              (parameter
                (identifier))
              (identifier)))))))
  (binding_statement
    (identifier)
    (try_with_expression
      (call_expression
        (identifier)
        (argument_list))
      (identifier)))
  (resume_dup_statement
    (identifier)
    (identifier)
    (linear_reference
      (identifier)))
  (module_return_statement
    (object_literal
      (field_block
        (shorthand_field
          (identifier))))))

==================
Annotated effect row and module instantiation
==================

module (!init: Init) where

import console from "./console.ix"

let greet: () -> <Io.read | Io.print> Text = () => {
  name <- Io.read()
  _ <- Io.print(borrow name)
  name
}

const { run, close } = console({ io: !init.io })
let result = run()
return { result, close }

---

(source_file
  (module_header
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (type_union
            (type_intersection
              (type_difference
                (identifier))))))))
  (import_statement
    (identifier)
    (string))
  (binding_statement
    (identifier)
    (type_reference
      (function_type
        (type_union
          (type_intersection
            (type_difference
              (unit_type))))
        (latent_effect_row
          (effect_row
            (effect_union_expression
              (effect_operation_reference
                (effect_identifier)
                (identifier))
              (effect_operation_reference
                (effect_identifier)
                (identifier)))))
        (type_union
          (type_intersection
            (type_difference
              (identifier))))))
    (arrow_function
      (parameter_list)
      (block
        (effect_binding_statement
          (identifier)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list)))
        (effect_binding_statement
          (wildcard)
          (call_expression
            (field_expression
              (identifier)
              (identifier))
            (argument_list
              (unary_expression
                (identifier)))))
        (expression_statement
          (identifier)))))
  (binding_statement
    (destructuring_pattern
      (identifier)
      (identifier))
    (call_expression
      (identifier)
      (argument_list
        (object_literal
          (field_block
            (field_definition
              (identifier)
              (field_expression
                (linear_reference
                  (identifier))
                (identifier))))))))
  (binding_statement
    (identifier)
    (call_expression
      (identifier)
      (argument_list)))
  (module_return_statement
    (object_literal
      (field_block
        (shorthand_field
          (identifier))
        (shorthand_field
          (identifier))))))
